yaml/sandbox/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: cache-vol
      mountPath: /cache
  - image: busybox
    name: sidecar
    volumeMounts:
    - name: cache-vol
      mountPath: /cache
  volumes:
  - name:  cache-vol
    emptyDir: {}
