yaml/sandbox/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - image: nginx
    name: nginx
