yaml/sandbox/redis-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis-svc
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:7
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data-vol
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
     name: data-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: fast
