yaml/sandbox/db-svc-hl.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: data
spec:
  clusterIP: None
  selector:
    app: postgres
    tier: backend
  ports:
  - port: 5432
    targetPort: 5432
