yaml/sandbox/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-hl
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
