yaml/sandbox/hls-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  clusterIP: None
  ports:
   - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
