yaml/sandbox/payments-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
  namespace: finance
spec:
  type: NodePort
  selector:
    app: payments
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 32443
