yaml/sandbox/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    tier: backend
  ports:
  - port: 8080
    targetPort: 80
