yaml/sandbox/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 8080
