yaml/sandbox/netpol-venus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: venus
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
